--- a/source/sass/_vars.scss
+++ b/source/sass/_vars.scss
@@ -4,7 +4,11 @@ $white-two: #f2f2f2;
 $leaf: #68b738;
 $pinkish-grey: #cdcdcd;
 $greyish-brown: #444444;
-
+$greyish-30-brown: rgba(68, 68, 68, 0.3);
+$black-60-two: rgba(17, 17, 17, 0.6);
+$black-30-two: rgba(17, 17, 17, 0.3);
+$white-60-three: rgba(255, 255, 255, 0.6);
+$white-30-three: rgba(255, 255, 255, 0.3);
 $bg-grey: $white-two;
 
 $font-head: "Oswald-Regular", "Arial", sans-serif;
