--- a/source/sass/blocks/addition-item-card.scss
+++ b/source/sass/blocks/addition-item-card.scss
@@ -1,3 +1,113 @@
 .addition-item-card {
   background-color: #ffffff;
+  min-height: 128px;
+  border-bottom: 1px solid #ededed;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card {
+    padding: 0 38px;
+    min-height: 138px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card {
+    padding: 0;
+    display: flex;
+    min-height: 40px;
+    justify-content: space-between;
+    margin-right: 80px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    align-content: center;
+    padding: 24px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__wrapper {
+    flex-grow: 1;
+    padding: 25px 0 23px 0;
+  }
+}
+
+.addition-item-card__headline {
+  padding-top: 13px;
+  margin: 0;
+  margin-bottom: 12px;
+  font-family: $font-head;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 16px;
+  color: #222222;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__headline {
+    margin: 0;
+    padding: 0;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.addition-item-card__properties {
+  display: flex;
+  font-family: $font-content;
+  font-size: 14px;
+  line-height: 14px;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 15px;
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__properties {
+    margin: 0;
+    font-size: 16px;
+    line-height: 20px;
+    justify-content: center;
+    align-content: flex-end;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .addition-item-card__price {
+    // padding-left: 50px;
+    min-width: 95px;
+    text-align: right;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__price {
+    min-width: 80px;
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__value {
+    min-width: 245px;
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addition-item-card__order {
+    margin: 15px 0;
+    width: 245px;
+    box-sizing: border-box;
+  }
 }
