--- a/source/sass/blocks/case.scss
+++ b/source/sass/blocks/case.scss
@@ -1,12 +1,12 @@
 .case {
   background-color: #f2f2f2;
 
-  margin-bottom: 62px;
+  margin-bottom: 100px;
 }
 
 @media (min-width: $tablet-width) {
   .case {
-    margin-bottom: 60px;
+    margin-bottom: -8px;
     background-color: $white;
   }
 }
@@ -60,44 +60,44 @@
 .case__container {
   width: 280px;
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 40px;
 }
 
 @media (min-width: $tablet-width) {
   .case__container {
     width: 708px;
-    margin-bottom: 255px;
+    margin-bottom: 235px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .case__container {
     width: 610px;
-
-    margin-bottom: 0;
-    margin-top: -5px;
+    align-self: stretch;
+    margin: 0;
   }
 }
 
 .case__desc {
   @include content;
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 30px;
 }
 
 @media (min-width: $tablet-width) {
   .case__desc {
     @include content-tablet;
     padding-right: 10px;
-    margin-bottom: 55px;
+    margin-bottom: 60px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .case__desc {
     @include content-tablet;
-    padding: 0;
-    margin-bottom: 70px;
+    padding-top: 68px;
+    margin-bottom: 75px;
+
     width: 432px;
   }
 }
