--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   min-width: 320px;
   position: relative;
-  background-image: url("build/img/bg-map-mobile@1x.png");
+  background-image: url("/img/bg-map-mobile@1x.png");
 }
 
 @media (min-width: $tablet-width) {
@@ -29,7 +29,7 @@
 
   width: 100vw;
   position: absolute;
-  top: -78px;
+  top: -115px;
   display: flex;
 }
 
@@ -118,7 +118,7 @@
   .contacts__address {
     font-size: 16px;
     line-height: 20px;
-    padding: 65px 0 60px 95px;
+    padding: 60px 0 60px 95px;
     width: 155px;
     text-align: left;
   }
