--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -14,7 +14,7 @@
 
 @media (min-width: $desktop-width) {
   .features {
-    width: $desktop-width;
+    width: 1220px;
     margin: 0 auto;
   }
 }
