--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,16 +1,18 @@
 .form {
-  margin-bottom: 100px;
+  margin-bottom: 145px;
 }
 
 @media (min-width: $tablet-width) {
   .form {
+    margin: 0 auto;
     margin-bottom: 73px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form {
-    margin-bottom: 82px;
+    margin: 0 auto;
+    margin-bottom: 85px;
   }
 }
 
@@ -39,7 +41,7 @@
 
 @media (min-width: $desktop-width) {
   .form__headline {
-    margin-left: 40px;
+    margin-left: calc((100vw - 1220px) / 2);
   }
 }
 
@@ -67,7 +69,7 @@
 
 @media (min-width: $desktop-width) {
   .form__desc {
-    margin-left: 40px;
+    margin-left: calc((100vw - 1220px) / 2);
   }
 }
 
@@ -94,23 +96,23 @@
   box-sizing: border-box;
 
   margin: 0 auto;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   align-content: center;
 }
 
 @media (min-width: $tablet-width) {
   .form__wrapper {
-    width: calc(100vw - 138px);
-    margin-bottom: 69px;
+    width: calc(100% - 138px);
+    margin-bottom: 75px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__wrapper {
     flex-direction: row;
-    width: calc(100vw - 80px);
+    width: 1220px;
     justify-content: space-between;
-    margin-bottom: 65px;
+    margin-bottom: 70px;
   }
 }
 
@@ -184,6 +186,12 @@
   overflow: hidden;
   border: 1px solid #e6e6e6;
 
+  font-family: $font-head;
+  font-size: 16px;
+  line-height: 18px;
+  color: $greyish-brown;
+  text-transform: uppercase;
+
   &:hover {
     border: 1px solid #cdcdcd;
   }
@@ -212,6 +220,9 @@
     height: 52px;
     padding-left: 22px;
     margin-left: 17px;
+
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
@@ -283,6 +294,7 @@
 .form__programs-list {
   list-style: none;
   padding-top: 15px;
+  padding-bottom: 15px;
   margin: 0;
   margin-left: 4px;
 
@@ -290,13 +302,13 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 @media (min-width: $tablet-width) {
   .form__programs-list {
-    min-height: 196px;
-    padding: 0;
-    padding-top: 20px;
+    min-height: 194px;
+    padding: 20px 0 16px 0;
   }
 }
 
@@ -313,7 +325,9 @@
 
 @media (min-width: $tablet-width) {
   .form__programs-item {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+
+    min-height: 30px;
   }
 }
 
@@ -329,45 +343,75 @@
   position: relative;
 }
 
-.form__programs-list label::before {
-  position: absolute;
-  content: "";
-  background-color: $white;
-  width: 29px;
-  height: 29px;
-  top: -2px;
-  left: -46px;
+.form__programs-list label {
+  &::before {
+    position: absolute;
+    content: "";
+    background-color: $white;
+    width: 29px;
+    height: 29px;
+    top: -2px;
+    left: -46px;
 
-  border-radius: 50%;
+    border-radius: 50%;
 
-  box-shadow: 0 0 1px 1px #cdcdcd;
-  box-sizing: border-box;
+    box-shadow: 0 0 1px 1px #cdcdcd;
+    box-sizing: border-box;
+  }
+
+  &:hover::before {
+    box-shadow: 0 0 1px 1px #bababa;
+  }
+
+  &:focus::before {
+    box-shadow: 0 0 1px 1px #bababa;
+  }
+
+  &:active::before {
+    opacity: 0.3;
+  }
 }
 
-input:checked ~ .form__field-label::before {
-  position: absolute;
-  content: "";
-  background-color: $leaf;
-  width: 29px;
-  height: 29px;
-  top: -2;
-  left: -46px;
+input:checked ~ .form__field-label {
+  &::before {
+    position: absolute;
+    content: "";
+    background-color: $leaf;
+    width: 29px;
+    height: 29px;
+    top: -2;
+    left: -46px;
 
-  border-radius: 50%;
-  border: 9px solid $white;
-  box-shadow: 0 0 1px 1px #cdcdcd;
-  box-sizing: border-box;
+    border-radius: 50%;
+    border: 9px solid $white;
+    box-shadow: 0 0 1px 1px #cdcdcd;
+    box-sizing: border-box;
+  }
 }
 
 @media (min-width: $tablet-width) {
-  .form__programs-list label::before {
-    position: absolute;
-    width: 38px;
-    height: 38px;
-    top: -2px;
-    left: -60px;
+  .form__programs-list label {
+    &::before {
+      position: absolute;
+      width: 38px;
+      height: 38px;
+      top: -2px;
+      left: -60px;
 
-    box-shadow: 0 0 1px 1px #cdcdcd;
+      box-shadow: 0 0 1px 1px #cdcdcd;
+    }
+
+    &:hover::before {
+      box-shadow: 0 0 1px 1px #bababa;
+    }
+
+    &:focus::before {
+      box-shadow: 0 0 1px 1px #bababa;
+    }
+
+    &:active::before {
+      opacity: 0.3;
+    }
   }
 }
 
@@ -384,38 +428,45 @@ input:checked ~ .form__field-label::before {
 
 // Контактные данные (владельца кота)
 
-.line {
-  position: relative;
-  display: block;
-  top: 17px;
-  border: none;
-  border-top: 3px solid $leaf;
-  width: 99vw;
-  z-index: 0;
-  margin: 0;
-}
-
-@media (min-width: $tablet-width) {
-  .line {
-    top: 25px;
-  }
-}
-
 .form__cat-owner-data {
   border: none;
   padding: 0;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 }
 
 @media (min-width: $tablet-width) {
   .form__cat-owner-data {
-    margin-bottom: 43px;
+    margin-bottom: 45px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__cat-owner-data {
-    margin-bottom: 65px;
+    margin-bottom: 70px;
+    position: relative;
+    z-index: 0;
+  }
+}
+
+.line {
+  position: relative;
+  z-index: 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    border: none;
+    border-bottom: 3px solid $leaf;
+    width: 100%;
+
+    z-index: -1;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .line::after {
+    top: 20px;
   }
 }
 
@@ -445,10 +496,8 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $desktop-width) {
   .form__fieldset-headline {
-    width: auto;
-    font-size: 36px;
-    line-height: 36px;
     margin: 0;
+    margin-left: calc((100vw - 1300px) / 2);
     margin-bottom: 75px;
     padding: 0 37px;
   }
@@ -472,9 +521,11 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $desktop-width) {
   .form__owner-data-list {
-    width: calc(100vw - 80px);
+    width: 1220px;
+
     flex-direction: row;
     justify-content: space-between;
+    box-sizing: border-box;
   }
 }
 
@@ -514,18 +565,18 @@ input:checked ~ .form__field-label::before {
   border: none;
   padding: 0;
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 28px;
 }
 
 @media (min-width: $tablet-width) {
   .form__comment {
-    margin-bottom: 62px;
+    margin-bottom: 65px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__comment {
-    margin-bottom: 65px;
+    margin-bottom: 66px;
   }
 }
 
@@ -544,7 +595,7 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $desktop-width) {
   .form__comment .form__fieldset-headline {
-    margin-left: 2px;
+    margin-left: calc((100vw - 1300px) / 2);
     padding-right: 40px;
   }
 }
@@ -561,11 +612,12 @@ input:checked ~ .form__field-label::before {
   min-height: 150px;
   border: 1px solid #e6e6e6;
   resize: none;
+  display: block;
 }
 
 @media (min-width: $tablet-width) {
   .form__comment textarea {
-    width: calc(100vw - 138px);
+    width: calc(100vw - 140px);
     margin: 0 70px;
     padding: 10px 18px;
     font-size: 20px;
@@ -576,8 +628,8 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $desktop-width) {
   .form__comment textarea {
-    width: calc(100vw - 80px);
-    margin: 0 40px;
+    width: 1220px;
+    margin: 0 auto;
   }
 }
 
@@ -603,7 +655,7 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $tablet-width) {
   .form__addition {
-    margin-bottom: 30px;
+    margin-bottom: 32px;
   }
 }
 
@@ -632,7 +684,7 @@ input:checked ~ .form__field-label::before {
 
 @media (min-width: $desktop-width) {
   .form__addition .form__fieldset-headline {
-    margin-left: -3px;
+    margin-left: calc((100vw - 1300px) / 2);
     margin-bottom: 66px;
   }
 }
@@ -662,7 +714,7 @@ input:checked ~ .form__field-label::before {
   .form__addition-list {
     min-height: auto;
     justify-content: flex-start;
-    width: calc(100vw - 80px);
+    width: 1220px;
     margin: 0 auto;
   }
 }
@@ -712,6 +764,18 @@ input:checked ~ .form__field-label::before {
     box-shadow: 0 0 1px 1px #cdcdcd;
     box-sizing: border-box;
   }
+
+  &:hover::before {
+    box-shadow: 0 0 1px 1px #bababa;
+  }
+
+  &:focus::before {
+    box-shadow: 0 0 1px 1px #bababa;
+  }
+
+  &:active::before {
+    opacity: 0.3;
+  }
 }
 
 input[type="checkbox"]:checked ~ .form__field-label {
@@ -741,6 +805,10 @@ input[type="checkbox"]:checked ~ .form__field-label {
     border-left: none;
     border-top: none;
     transform: rotate(45deg);
+  }
+
+  &:active::after {
+    opacity: 0.3;
   }
 }
 
@@ -774,11 +842,15 @@ input[type="checkbox"]:checked ~ .form__field-label {
       height: 20px;
       top: 2px;
       left: -46px;
-      border: 1px solid $leaf;
+      border: 2px solid $leaf;
       box-sizing: border-box;
       border-left: none;
       border-top: none;
       transform: rotate(45deg);
+    }
+
+    &:active::after {
+      opacity: 0.3;
     }
   }
 }
@@ -805,7 +877,7 @@ input[type="checkbox"]:checked ~ .form__field-label {
 
 @media (min-width: $desktop-width) {
   .form__submit {
-    width: calc(100vw - 80px);
+    width: 1220px;
   }
 }
 
@@ -832,6 +904,7 @@ input[type="checkbox"]:checked ~ .form__field-label {
 }
 
 .form__notice {
+  font-family: $font-content;
   font-size: 14px;
   line-height: 16px;
   color: $greyish-brown;
