--- a/source/sass/blocks/item-card.scss
+++ b/source/sass/blocks/item-card.scss
@@ -49,7 +49,7 @@
     border: 1px solid #ededed;
     padding: 0;
     justify-content: space-between;
-    padding-top: 52px;
+    padding-top: 54px;
     padding-bottom: 40px;
   }
 }
@@ -65,6 +65,7 @@
 }
 
 .item-card__desc {
+  font-family: $font-content;
   font-size: 12px;
   line-height: 16px;
   margin: 0;
@@ -89,7 +90,8 @@
     content: "";
     width: 100%;
     height: 2px;
-    top: 15px;
+    top: 18px;
+
     background-color: #222222;
   }
 
@@ -98,7 +100,8 @@
     content: "";
     width: 2px;
     height: 100%;
-    left: 15px;
+    left: 14px;
+    top: 4px;
     background-color: #222222;
   }
 }
@@ -136,7 +139,7 @@
 
   margin: 0;
   width: 70%;
-  padding: 6px 0 10px 0;
+  padding-bottom: 10px;
   text-transform: uppercase;
 }
 
