--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -35,6 +35,22 @@
   padding-top: 10px;
   padding-bottom: 11px;
   padding-left: 19px;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+a.page-header__logo:active {
+  opacity: 0.6;
 }
 
 @media (min-width: $tablet-width) {
