--- a/source/sass/blocks/program-item.scss
+++ b/source/sass/blocks/program-item.scss
@@ -14,7 +14,6 @@
 
 @media (min-width: $tablet-width) {
   .program-item {
-
     width: 708px;
     min-height: 372px;
     padding: 50px;
@@ -164,12 +163,15 @@
   position: relative;
   display: inline-block;
 
-
   font-family: $font-head;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
   color: #111111;
+
+  &:active {
+    color: rgba(17, 17, 17, 0.3);
+  }
 
   &::before {
     position: absolute;
@@ -181,6 +183,15 @@
     background-color: #111111;
   }
 
+  &:hover::before {
+    width: 25px;
+    right: -40px;
+  }
+
+  &:active::before {
+    background-color: rgba(17, 17, 17, 0.3);
+  }
+
   &::after {
     position: absolute;
     content: "";
@@ -190,6 +201,14 @@
     height: 0;
     border: 6px solid transparent;
     border-left-color: #111111;
+  }
+
+  &:hover::after {
+    right: -50px;
+  }
+
+  &:active::after {
+    border-left-color: rgba(17, 17, 17, 0.3);
   }
 }
 
@@ -205,9 +224,18 @@
       top: 10px;
     }
 
+    &:hover::before {
+      width: 25px;
+      right: -50px;
+    }
+
     &::after {
       right: -55px;
       top: 5px;
+    }
+
+    &:hover::after {
+      right: -60px;
     }
   }
 }
