--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -49,13 +49,15 @@
   background-color: #ffffff;
   z-index: 1;
   margin-bottom: 25px;
+  margin-left: calc((100vw - 320px) / 2);
 }
 
 @media (min-width: $tablet-width) {
   .addition__headline {
     font-size: 36px;
     line-height: 36px;
-    margin: 68px 0 80px 30px;
+    margin: 68px 0 80px 0;
+    margin-left: calc((100vw - 708px) / 2);
 
     padding: 0 30px 0 38px;
   }
@@ -87,14 +89,15 @@
   padding: 0;
   // min-width: 280px;
   // width: 88%;
-  width: calc(100vw - 40px);
+  width: 280px;
   border-top: 1px solid #ededed;
 }
 
 @media (min-width: $tablet-width) {
   .addition__list {
-    width: calc(100vw - 60px);
+    width: 708px;
     border: 1px solid #ededed;
+    margin: 0 auto;
     margin-bottom: 67px;
   }
 }
@@ -131,7 +134,7 @@
     justify-content: space-between;
     height: 200px;
     background-image: url("/img/gift-photo-tablet@1x.jpg");
-    width: calc(100vw - 60px);
+    width: 708px;
   }
 }
 
