--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -37,9 +37,9 @@
   font-weight: 400;
   color: #111111;
   margin: 0;
+  margin-left: calc((100vw - 280px) / 2);
   padding-top: 15px;
 
-  padding-left: 20px;
   padding-bottom: 28px;
   border-bottom: 1px solid #f2f2f2;
   border-top: 1px solid #f2f2f2;
@@ -51,6 +51,7 @@
     border: none;
     padding: 0;
     margin-bottom: 20px;
+    margin-left: 0;
   }
 }
 
