--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -56,7 +56,7 @@
     text-align: left;
     min-width: 450px;
     margin: 0;
-    margin-left: calc((100vw - 528px) / 2);
+    margin-left: calc((100vw - 538px) / 2);
     margin-bottom: 40px;
   }
 }
@@ -70,7 +70,7 @@
     align-self: center;
 
     margin: 0;
-    // margin-left: 9vw;
+
     margin-bottom: 42px;
   }
 }
@@ -89,7 +89,7 @@
     font-size: 20px;
     line-height: 20px;
     text-align: left;
-    margin-left: calc((100vw - 528px) / 2);
+    margin-left: calc((100vw - 538px) / 2);
     margin-bottom: 50px;
   }
 }
@@ -119,7 +119,7 @@
     margin: 0;
     z-index: 10;
     min-width: 225px;
-    margin-left: calc((100vw - 528px) / 2);
+    margin-left: calc((100vw - 538px) / 2);
     padding: 16px 0;
     width: 245px;
   }
@@ -161,8 +161,8 @@
   .programs__wrapper {
     align-self: center;
     min-height: 300px;
-    width: 41vw;
-    padding-left: 9vw;
+    width: 530px;
+    margin-left: calc((100vw - 1060px) / 2);
   }
 }
 
