--- a/source/sass/blocks/addition.scss
+++ b/source/sass/blocks/addition.scss
@@ -118,7 +118,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $leaf;
-  background-image: url("/img/gift-photo-mobile@1x.jpg");
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -133,7 +133,7 @@
     flex-direction: row;
     justify-content: space-between;
     height: 200px;
-    background-image: url("/img/gift-photo-tablet@1x.jpg");
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
     width: 708px;
   }
 }
@@ -144,7 +144,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 290px;
-    background-image: url("/img/gift-photo-desktop@1x.jpg");
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
     width: 245px;
   }
 }
