--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,12 +2,12 @@
   margin: 0 auto;
   min-width: 320px;
   position: relative;
-  background-image: url("/img/bg-map-mobile@1x.png");
 }
 
 @media (min-width: $tablet-width) {
   .contacts {
     width: 100%;
+    background-image: url("../img/bg-map-tablet@1x.png");
   }
 }
 
@@ -22,6 +22,23 @@
   height: 400px;
   display: block;
   background-color: #f7f7f7;
+  background-image: url("../img/bg-map-mobile@1x.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (min-width: $tablet-width) {
+  .contacts__map-image {
+    background-image: url("../img/bg-map-tablet@1x.png");
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts__map-image {
+    width: 100%;
+    overflow: visible;
+    background-image: url("../img/bg-map-desktop@1x.png");
+  }
 }
 
 .contacts__wrapper {
@@ -55,10 +72,9 @@
   .contacts__wrapper {
     position: absolute;
     top: 95px;
-    left: 40px;
+    left: calc((100vw - 1220px) / 2);
     width: 570px;
     background-color: #ffffff;
-
     margin: 0;
     padding: 0;
     justify-content: flex-start;
@@ -122,13 +138,6 @@
     padding: 60px 0 60px 95px;
     width: 155px;
     text-align: left;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .contacts__map-image {
-    width: 100%;
-    overflow: visible;
   }
 }
 
